登录部分界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,25 +15,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".haoDengKe.H_breakfast"/>
-        <activity android:name=".haoDengKe.H_breakfast2"/>
-        <activity android:name=".wangHan.W_moreHotTxt"/>
-        <activity android:name=".wangHan.W_UserCommunicate"/>
-        <activity android:name=".wangHan.W_workDisplay"/>
-        <activity android:name=".wangRui.S_test_1"/>
-        <activity android:name=".yuJiangPeng.Y_test_1"/>
-        <activity android:name=".haoDengKe.H_breakfast_item2"/>
-        <activity android:name=".haoDengKe.H_fash"/>
-        <activity android:name=".haoDengKe.H_harm"/>
-        <activity android:name=".haoDengKe.H_milk"/>
-        <activity android:name=".haoDengKe.H_ribs"/>
-        <activity android:name=".haoDengKe.H_search"/>
-        <activity android:name=".wangHan.W_mylove"/>
-        <activity android:name=".wangHan.W_ExpertsAnswer"/>
-
-
-
-
+        <activity android:name=".haoDengKe.H_breakfast" />
+        <activity android:name=".haoDengKe.H_breakfast2" />
+        <activity android:name=".wangHan.W_moreHotTxt" />
+        <activity android:name=".wangHan.W_UserCommunicate" />
+        <activity android:name=".wangHan.W_workDisplay" />
+        <activity android:name=".wangRui.S_test_1" />
+        <activity android:name=".yuJiangPeng.Y_test_1" />
+        <activity android:name=".haoDengKe.H_breakfast_item2" />
+        <activity android:name=".haoDengKe.H_fash" />
+        <activity android:name=".haoDengKe.H_harm" />
+        <activity android:name=".haoDengKe.H_milk" />
+        <activity android:name=".haoDengKe.H_ribs" />
+        <activity android:name=".haoDengKe.H_search" />
+        <activity android:name=".wangHan.W_mylove" />
+        <activity android:name=".wangHan.W_ExpertsAnswer" />
+        <activity android:name=".wangRui.S_loginUi"></activity>
     </application>
 
 </manifest>
