增加了营养师资料详细页面 并实现了点击前8个头像跳转 0.0

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity android:name=".haoDengKe.H_search"/>
         <activity android:name=".wangHan.W_mylove"/>
         <activity android:name=".wangHan.W_ExpertsAnswer"/>
+        <activity android:name=".yuJiangPeng.Y_detail_data"/>
+        <activity android:name=".yuJiangPeng.Y_bespoke_demo"/>
 
 
 
