跳转登录部分修改

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".wangHan.W_UserCommunicate"/>
         <activity android:name=".wangHan.W_workDisplay"/>
         <activity android:name=".wangRui.S_test_1"/>
+        <activity android:name=".wangRui.S_loginUi"/>
         <activity android:name=".yuJiangPeng.Y_test_1"/>
         <activity android:name=".haoDengKe.H_breakfast_item2"/>
         <activity android:name=".haoDengKe.H_fash"/>
