--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.neusoft.a124team.dietitian">
+          package="edu.neusoft.a124team.dietitian">
 
     <application
         android:allowBackup="true"
@@ -10,9 +10,9 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity android:name=".haoDengKe.H_breakfast"/>
@@ -21,8 +21,6 @@
         <activity android:name=".wangHan.W_UserCommunicate"/>
         <activity android:name=".wangHan.W_workDisplay"/>
         <activity android:name=".wangRui.S_test_1"/>
-        <activity android:name=".wangRui.S_loginUi"/>
-        <activity android:name=".wangRui.S_register"/>
         <activity android:name=".yuJiangPeng.Y_test_1"/>
         <activity android:name=".haoDengKe.H_breakfast_item2"/>
         <activity android:name=".haoDengKe.H_fash"/>
@@ -34,8 +32,8 @@
         <activity android:name=".wangHan.W_ExpertsAnswer"/>
         <activity android:name=".yuJiangPeng.Y_detail_data"/>
         <activity android:name=".yuJiangPeng.Y_bespoke_demo"/>
-
-
+        <activity android:name=".haoDengKe.H_fruit">
+        </activity>
     </application>
 
 </manifest>
