增加水果羹页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
         <activity android:name=".yuJiangPeng.Y_bespoke_demo"/>
         <activity android:name=".haoDengKe.H_fruit">
         </activity>
+        <activity android:name=".haoDengKe.H_candy">
+        </activity>
     </application>
 
 </manifest>
