--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
-
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "edu.neusoft.a124team.dietitian"
         minSdkVersion 23
