修改图片大小

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,10 +44,10 @@
         <activity android:name=".haoDengKe.H_search" />
         <activity android:name=".wangHan.W_mylove" />
         <activity android:name=".wangHan.W_ExpertsAnswer" />
-        <activity android:name=".yuJiangPeng.Y_detail_data" />
-        <activity android:name=".yuJiangPeng.Y_bespoke_demo" />
-        <activity android:name=".yuJiangPeng.Y_conversation_demo" />
-        <activity android:name=".yuJiangPeng.Y_popups_activity" />
+        <activity android:name=".wanghao.H_detail_data" />
+        <activity android:name=".wanghao.W_bespoke_demo" />
+        <activity android:name=".wanghao.W_conversation_demo" />
+        <activity android:name=".wanghao.H_popups_activity" />
         <activity android:name=".haoDengKe.H_fruit" />
         <activity android:name=".haoDengKe.H_candy" />
         <activity
