--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,11 @@ repositories{
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile name:'SMSSDK-2.1.1',ext:'aar'
-    compile name:'SMSSDKGUI-2.1.1',ext:'aar'
+    compile name: 'SMSSDK-2.1.1', ext: 'aar'
+    compile name: 'SMSSDKGUI-2.1.1', ext: 'aar'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile files('libs/MobCommons-2016.0714.1402.jar')
     compile files('libs/MobTools-2016.0714.1402.jar')
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile files('libs/library-1.0.19.jar')
 }
